fixed hgvalues method which was including inherited methods

--- a/mercurydb/build.gradle
+++ b/mercurydb/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 group = 'com.github.mercurydb'
-version = '0.6.2'
+version = '0.6.3-SNAPSHOT'
 
 def ossrhUsername = project.hasProperty('ossrhUsername') ? project.property('ossrhUsername') : null
 def ossrhPassword = project.hasProperty('ossrhPassword') ?  project.property('ossrhPassword') : null
@@ -27,7 +27,9 @@ task sourcesJar(type: Jar) {
 }
 
 artifacts {
-    archives jar, javadocJar, sourcesJar
+    archives jar
+    archives javadocJar
+    archives sourcesJar
 }
 
 signing {
